# devops-kanban

./: .gitignore  .mcp.json  CLAUDE.md  PLAN.md  PYTHON_BACKEND.md  README.md  SMOKE_TESTS.md  note-dev.md  note-phase-transition.md  package-lock.json  package.json  pom.xml  start.bat  start.sh  使用指南.md  录屏2026-03-18 16.22.32.mov
backend/: .env  .env.example  .gitignore  README.md  config.py  enums.py  init_mock_data.py  main.py  notification-config.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  skills.json  start.sh  storage.py  tsconfig.json
backend/app/: __init__.py  config.py  main.py
backend/repositories/: agents.py  executions.py  members.py  projects.py  requirements.py  roles.py  tasks.py
backend/routes/: __init__.py  agents.py  executions.py  members.py  projects.py  requirements.py  roles.py  tasks.py
backend/schemas/: member.py  project.py  requirement.py  role.py  task.py
backend/scripts/: db-migrate.ts  db-reset.ts  migrate-requirements.js
backend/src/: app.ts  main.js  main.ts
backend/task-sources/: config.yaml
backend/test/: agentExecutorRegistry.test.js  agentExecutorRegistry.test.ts  agentRoutes.mcpServers.test.ts  agentRoutes.test.ts  agentRoutes.validation.test.ts  baseRepository.test.ts  bundleExportImport.test.ts  bundleZipExportImport.test.ts  claudeStepPromptBuilder.test.js  claudeStepResult.test.js  claudeStepResult.test.ts  claudeStepRunner.test.js  claudeStepRunner.test.ts  commandResolver.test.js  commandResolver.test.ts  errorHandler.test.ts  errors.test.ts  executorMcpPreparation.test.ts  main.test.js  (+53 more)
(+672 files in other folders)
